<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052">


    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="20dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/common_google_signin_btn_icon_dark" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_contact_mail_black_24dp"
                    android:drawableLeft="@drawable/ic_contact_mail_black_24dp"

                    android:drawablePadding="5dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="abc@gmail.com" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="123456" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round"
                    android:text="@string/sign_in"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/relLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">




                    <Button
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/linkBlue"
                        android:textSize="16sp" />



                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@color/colorPrimary"
            android:visibility="invisible" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>