<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/relLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textEmailReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:text="@string/email_registration"
                        android:textSize="25sp" />


                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textEmailReg"
                        android:layout_marginTop="30dp"
                        android:drawableStart="@drawable/ic_contact_mail_black_24dp"
                        android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                        android:drawablePadding="5dp"
                        android:textColor="@color/colorTextBackground"
                        android:hint="@string/prompt_email"

                        android:inputType="textEmailAddress" />


                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_email"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="5dp"
                        android:textColor="@color/colorTextBackground"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_password"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="5dp"
                        android:textColor="@color/colorTextBackground"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_confirm_password"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="5dp"
                        android:text="@string/register" />

                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>