<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052">


    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/text_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number"

                android:textColor="@color/colorTextBackground"
                tools:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:gravity="center">


                <EditText
                    android:id="@+id/et1"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/et2"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/et3"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/et4"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/et5"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/et6"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et7"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et8"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et9"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et10"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"

                    android:maxLength="1"
                    android:textAlignment="center" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:background="@drawable/round"
                android:onClick="sendSms"
                android:text="@string/send" />
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:gravity="start"
                    android:text="@string/otp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorTextBackground"
                    android:textStyle="bold"
                    tools:visibility="visible" />


                <EditText
                    android:id="@+id/otp_et1"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/otp_et2"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/otp_et3"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/otp_et4"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/otp_et5"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/otp_et6"
                    android:layout_width="@dimen/et_width"
                    android:layout_height="@dimen/et_height"
                    android:layout_marginHorizontal="@dimen/horizontal_otp_margin"
                    android:background="@color/colorTextBackground"
                    android:hint="@string/hiphen"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/verifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:background="@drawable/round"
                    android:onClick="verifyOTP"
                    android:text="@string/verify" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:background="@drawable/round"
                android:onClick="update"
                android:text="@string/update" />

        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>